--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,6 +62,7 @@ body {
     padding: 10px 20px;
     cursor: pointer;
     transition: transform var(--transition-speed);
+    text-decoration: none
 }
 
 .btn:hover {
@@ -74,19 +75,52 @@ body {
 }
 
 .price-slider-label {
-  display: flex;
-  align-items: center;
-  gap: 12px; /* Fixed padding/space between label text and slider */
-  width: 350px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    /* Fixed padding/space between label text and slider */
+    width: 350px;
 }
 
 .slider-container {
-  flex: 1; /* Takes remaining space, slider stays right-aligned */
-  display: flex;
-  justify-content: flex-end;
+    flex: 1;
+    /* Takes remaining space, slider stays right-aligned */
+    display: flex;
+    justify-content: flex-end;
 }
 
 .price-slider {
-  width: 100%; /* Full width of container */
-  max-width: 200px; /* Optional: constrain slider width */
+    width: 100%;
+    /* Full width of container */
+    max-width: 200px;
+    /* Optional: constrain slider width */
+}
+
+.service_details_img {
+    max-width: 1000px;
+    max-height: 550px;
+    width: 100%;
+    height: auto;
+}
+
+.service_card_img {
+    max-width: 200px;
+    max-height: 120px;
+    width: 100%;
+    height: auto;
+}
+
+.article_content {
+    column-count: 2;
+    column-gap: 20px;
+    text-align: justify;
+    float: none;
+}
+
+h2 {
+    padding-left: 20px;
+}
+
+.nav-right {
+    margin-left: auto;
 }
